[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player/machine/PowershotMachine.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ss_newPlayer_003.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/machine/PowershotWeapon.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/player/weapon/snd_weapon_subshot2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/player/weapon/snd_weapon_mainshot4.wav" type="AudioStream" id=5]
[ext_resource path="res://nodes/player/PlayerLockonMissile.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/player/PlayerBullet.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.333333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 0.419608, 0.419608, 0.419608, 0.25098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "LeanLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, -5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "LeanRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 2 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "dyingAnim"
length = 0.0833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( 10, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fadeout"
length = 0.5
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.498 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.498 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="PowershotMachine" type="Node2D"]
script = ExtResource( 1 )
machineName = "Power"

[node name="SpriteAnchor" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteAnchor"]
rotation = 1.5708
z_index = 1
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteAnchor"]
anims/Hit = SubResource( 1 )
anims/LeanLeft = SubResource( 2 )
anims/LeanRight = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/dyingAnim = SubResource( 6 )
anims/fadeout = SubResource( 7 )

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 3 )
mainWeaponNode = ExtResource( 8 )
mainFireRate = 12.0
mainWeaponSFX = ExtResource( 5 )
subWeaponNode = ExtResource( 7 )
subFireRate = 2.0
subWeaponSFX = ExtResource( 4 )

[node name="MainWeapon" type="Node2D" parent="Weapon"]

[node name="Level 0" type="Node2D" parent="Weapon/MainWeapon"]
visible = false

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level 0"]
position = Vector2( 18, -7 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level 0"]
position = Vector2( 18, 4 )

[node name="Level 1" type="Node2D" parent="Weapon/MainWeapon"]
visible = false

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level 1"]
position = Vector2( 18, 0 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level 1"]
position = Vector2( 34, -10 )

[node name="FirePoint3" type="Position2D" parent="Weapon/MainWeapon/Level 1"]
position = Vector2( 34, 10 )

[node name="Level 2" type="Node2D" parent="Weapon/MainWeapon"]

[node name="FirePoint" type="Position2D" parent="Weapon/MainWeapon/Level 2"]
position = Vector2( 18, 0 )

[node name="FirePoint2" type="Position2D" parent="Weapon/MainWeapon/Level 2"]
position = Vector2( 33, -10 )

[node name="FirePoint3" type="Position2D" parent="Weapon/MainWeapon/Level 2"]
position = Vector2( 33, 10 )

[node name="FirePoint4" type="Position2D" parent="Weapon/MainWeapon/Level 2"]
position = Vector2( 44, -15 )

[node name="FirePoint5" type="Position2D" parent="Weapon/MainWeapon/Level 2"]
position = Vector2( 44, 15 )

[node name="SubWeapon" type="Node2D" parent="Weapon"]

[node name="FirePoint" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -40, 0 )

[node name="FirePoint2" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -35, -15 )
rotation = -0.0872665

[node name="FirePoint3" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -35, 15 )
rotation = 0.0872665

[node name="FirePoint4" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -30, -25 )
rotation = -0.174533

[node name="FirePoint5" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -30, 25 )
rotation = 0.174533

[node name="FirePoint6" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -22, -35 )
rotation = -0.349066

[node name="FirePoint7" type="Position2D" parent="Weapon/SubWeapon"]
position = Vector2( -22, 35 )
rotation = 0.349066

[node name="MainWeaponSFX" type="AudioStreamPlayer" parent="Weapon"]
volume_db = -5.0

[node name="SubWeaponSFX" type="AudioStreamPlayer" parent="Weapon"]
volume_db = -3.0

[node name="LevelupSFX" type="AudioStreamPlayer" parent="Weapon"]
